# poli_market_api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  start.sh
migrations/2025-11-16-094643_initial_schema/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: mod.rs
src/modules/: mod.rs
src/modules/common/: errors.rs  types.rs
src/modules/inventarios/: handler.rs  model.rs  repository.rs  service.rs
src/modules/personas/: handler.rs  model.rs  repository.rs  service.rs
src/modules/productos/: handler.rs  model.rs  repository.rs  service.rs
src/modules/ventas/: handler.rs  model.rs  repository.rs  service.rs
src/state/: app_state.rs
