[package]
name = "poli_market_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix Web Framework
actix-web = "4.11.0"
actix-cors = "0.7"

# Diesel ORM with PostgreSQL support
diesel = { version = "2.3.2", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID support
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Big decimal for monetary values
bigdecimal = { version = "0.4", features = ["serde"] }
